--- a/Docker/DockerfileApp
+++ b/Docker/DockerfileApp
@@ -16,8 +16,8 @@ RUN apt-get update && \
     docker-php-ext-install ldap &&\
     apt-get clean
 
+RUN echo "error_reporting = E_ERROR" >> /usr/local/etc/php/conf.d/docker-php-ext-ldap.ini
 RUN git clone $GIT_REPO_URL /var/www/html/ldap
 RUN chmod 775 -R ldap/
 RUN chown www-data -R ldap/
 RUN chgrp www-data -R ldap/
-RUN echo 'ServerName localhost' >> /etc/apache2/apache2.conf
